--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,14 +14,14 @@
             android:title="@string/professionals" />
 
         <item
-            android:id="@+id/nav_emergency"
-            android:icon="@drawable/ic_emergency"
-            android:title="@string/emergency"/>
+            android:id="@+id/nav_consultation"
+            android:icon="@drawable/ic_local_hospital"
+            android:title="@string/consultation" />
 
         <item
-            android:id="@+id/nav_market"
-            android:icon="@drawable/ic_store_black"
-            android:title="@string/market"/>
+            android:id="@+id/nav_associateds"
+            android:title="@string/associateds"
+            android:icon="@drawable/ic_store_black" />
 
         <item
             android:id="@+id/nav_company"
@@ -31,13 +31,18 @@
     </group>
 
     <group
-        android:id="@+id/group_menu_settings"
+        android:id="@+id/group_menu_2"
         android:checkableBehavior="single">
 
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black"
             android:title="@string/settings" />
+
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info_black"
+            android:title="@string/about" />
     </group>
 
 </menu>
