--- a/app/src/main/res/layout/fragment_professionals.xml
+++ b/app/src/main/res/layout/fragment_professionals.xml
@@ -6,13 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_professionals"
-        android:text="@string/professionals"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_conversation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
