--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,14 +10,14 @@
     <ProgressBar
         android:id="@+id/progress_bar_splash"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_height="@dimen/height_progressbar"
         android:layout_marginBottom="@dimen/margin_bottom_progress"
-        android:background="@color/colorPrimaryDark"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true"
-        app:layout_constraintBottom_toTopOf="@+id/img_spalsh"
+        android:indeterminateDrawable="@drawable/custom_progressbar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/img_splash"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -26,7 +26,7 @@
         android:id="@+id/img_splash"
         android:layout_width="240dp"
         android:layout_height="300dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="132dp"
         android:contentDescription="@string/name_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
