--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,8 @@
     <dimen name="text_size">18sp</dimen>
     <dimen name="button_radius"> 20dp</dimen>
     <dimen name="margin_bottom_progress"> 15dp</dimen>
-    <dimen name="text_logo_splash">26sp</dimen>
+    <dimen name="text_logo_splash">18sp</dimen>
+    <dimen name="height_progressbar">10dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
