--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,7 +14,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/img_user_navheader"
+        android:id="@+id/nav_header_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/user_name"
@@ -22,7 +22,7 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/nav_bar_username"
+        android:id="@+id/nav_header_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
