--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,11 +15,11 @@
 
     <ImageView
         android:id="@+id/nav_header_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/nav_header_img_size"
+        android:layout_height="@dimen/nav_header_img_size"
         android:contentDescription="@string/user_name"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:src="@drawable/default_user" />
 
     <TextView
         android:id="@+id/nav_header_username"
