--- a/app/src/main/res/layout/associated_adapter_item.xml
+++ b/app/src/main/res/layout/associated_adapter_item.xml
@@ -24,14 +24,26 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_name_associated"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_form_item"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="@string/enter_name" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_name_associated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_form_item"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_type_associated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_form_item"
+            android:layout_marginRight="@dimen/margin_form_item"/>
+
+    </LinearLayout>
 
 </LinearLayout>
