--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -49,6 +49,17 @@
         </shape>
     </item>
 
+    <item
+        android:state_enabled="true">
+        <shape
+            android:shape="rectangle">
+            <solid
+                android:color="@color/colorPrimaryDark" />
+            <corners
+                android:radius="@dimen/button_radius" />
+        </shape>
+    </item>
+
     <item>
         <shape
             android:shape="rectangle">
