--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="margin_bottom_progress"> 15dp</dimen>
     <dimen name="text_logo_splash">18sp</dimen>
     <dimen name="height_progressbar">10dp</dimen>
+    <dimen name="margin_message_box"> 5dp</dimen>
     <dimen name="img_view_associateds">200dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
