--- a/app/src/main/res/layout/message_send_adapter_item_.xml
+++ b/app/src/main/res/layout/message_send_adapter_item_.xml
@@ -7,23 +7,29 @@
     android:background="@color/colorPrimaryDark"
     android:layout_marginTop="@dimen/margin_message_box"
     android:layout_marginBottom="@dimen/margin_message_box"
+    android:padding="@dimen/margin_message_box"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_author_message"
         android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:text="@string/you"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_message"
         android:textColor="@color/colorWhite"
+        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_message_date"
         android:textColor="@color/colorWhite"
+        android:textStyle="italic"
+        android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
