--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#9E9E9E</color>
     <color name="whiteSmoke">#F5F5F5</color>
+    <color name="colorRed">#FF0000</color>
 
     <!-- nav_header colors gradient-->
     <color name="centerColor">#009688</color>
