--- a/app/src/main/res/drawable/corner.xml
+++ b/app/src/main/res/drawable/corner.xml
@@ -4,4 +4,8 @@
     android:shape="rectangle">
     <corners
         android:radius="10dp" />
+
+    <solid
+        android:color="@color/whiteSmoke" />
+
 </shape>
