Changes in module consulta

--- a/app/src/main/res/layout/chat_adapter_item.xml
+++ b/app/src/main/res/layout/chat_adapter_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/professionals"
             android:scaleType="centerCrop"
-            android:src="@drawable/screen" />
+            android:src="@drawable/default_user" />
 
     </androidx.cardview.widget.CardView>
 
