--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_title"
-        android:text="@string/app_name"
+        android:text=""
         android:textSize="@dimen/text_logo_splash"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"
