--- a/app/src/main/res/layout/activity_associated.xml
+++ b/app/src/main/res/layout/activity_associated.xml
@@ -16,18 +16,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_height="match_parent"
         tools:context="com.sidoso.paciente.AssociatedActivity" />
-
-    <TextView
-        android:id="@+id/tv_associated_contact"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textStyle="italic"
-        android:layout_marginLeft="@dimen/margin_form_item"
-        android:layout_marginRight="@dimen/margin_form_item"
-        />
 
 </LinearLayout>
